[gd_scene load_steps=2 format=3 uid="uid://dr57x3n4b46j7"]

[ext_resource type="Script" uid="uid://dsjm50ujcwgj" path="res://exit.gd" id="1_7ve3p"]

[node name="Exit" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)
script = ExtResource("1_7ve3p")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BGCol" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.740051, 0.0868675, 0.356579, 0.529412)

[node name="Exit" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_bottom = 70.0
grow_horizontal = 0
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="ExitMain" type="VBoxContainer" parent="CanvasLayer/Exit"]
layout_mode = 2

[node name="ExitExpand" type="Button" parent="CanvasLayer/Exit/ExitMain"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Exit
"

[node name="ExitConfirmation" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -59.5
offset_right = 145.5
offset_bottom = 59.5
grow_horizontal = 2
grow_vertical = 2

[node name="ExitMain" type="VBoxContainer" parent="CanvasLayer/ExitConfirmation"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CanvasLayer/ExitConfirmation/ExitMain"]
layout_mode = 2
text = "Are you sure you want to exit?
This will return you to the main menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ExitConfirmation/ExitMain"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="YesConfirm" type="Button" parent="CanvasLayer/ExitConfirmation/ExitMain/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 4
text = "YES"

[node name="NoConfirm" type="Button" parent="CanvasLayer/ExitConfirmation/ExitMain/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_vertical = 4
text = "No
"

[connection signal="pressed" from="CanvasLayer/Exit/ExitMain/ExitExpand" to="." method="_on_exit_expand_pressed"]
[connection signal="pressed" from="CanvasLayer/ExitConfirmation/ExitMain/HBoxContainer/YesConfirm" to="." method="_on_yes_confirm_pressed"]
[connection signal="pressed" from="CanvasLayer/ExitConfirmation/ExitMain/HBoxContainer/NoConfirm" to="." method="_on_no_confirm_pressed"]
